--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 </script>
 <body>
   <gdm-live-audio></gdm-live-audio>
-<script type="module" src="/index.tsx"></script>
+<script type="module" src="./index.tsx"></script>
 </body>
-<link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="./index.css">
